# ShapeLLM

./: README.md  pyproject.toml
ReConV2/: convert_features.py  generate_depth_map.py  main.py  multi_cls.py  requirements.txt
ReConV2/cfgs/dataset_configs/: Cap3D.yaml  Hybrid.yaml  (+9 more)
ReConV2/datasets/: Cap3D.py  HybridDataset.py  ModelNetDataset.py  ModelNetDatasetFewShot.py  OpenShape.py  ScanObjectNNDataset.py  ShapeNet55Dataset.py  __init__.py  data.py  data_transforms.py  io.py  pc_render.py
ReConV2/models/: ReCon.py  __init__.py  build.py  transformer.py
ReConV2/scripts/: cls.sh  pretrain_supervise.sh  svm.sh  zeroshot.sh
ReConV2/segmentation/: knn.py  main.py  misc.py  seg.sh  test.sh
ReConV2/tools/: __init__.py  builder.py  runner_finetune.py  runner_pretrain.py  runner_svm.py  runner_zeroshot.py
ReConV2/utils/: data.py  dist_utils.py  knn.py  misc.py  parser.py  randaugment.py  registry.py  transforms.py
assets/: instrument.npy
docs/: DATA.md  Data.md  MODEL_ZOO.md
llava/: constants.py  conversation.py  mm_utils.py
llava/eval/: eval_3dmmvet.py  eval_gapartnet.py  eval_modelnet_cls.py  eval_objaverse.py  evaluator.py  gpt_eval.py  model_vqa.py  traditional_evaluator.py  utils.py
llava/model/: builder.py  llava_arch.py
llava/serve/: cli.py  model_worker.py
llava/train/: llava_trainer.py  train.py
scripts/: finetune.sh  finetune_lora.sh  inference.sh  merge_lora_weights.py  pretrain.sh
scripts/eval/: eval_gapartnet.sh  eval_mmvet.sh  eval_modelnet40_cls.sh  eval_objaverse_cap.sh  eval_objaverse_cls.sh  gapartnet_ref.sh  mmvet.sh  modelnet40_cls.sh  objaverse_cap.sh  objaverse_cls.sh
(+60 files in other folders)
