[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.1.3"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.0.1", "torchvision==0.15.2",
    "transformers==4.31.0", "tokenizers>=0.12.1,<0.14", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.21.0", "peft==0.4.0", "bitsandbytes==0.41.0",
    "pydantic<2,>=1", "markdown2[all]", "numpy==1.26.4", "scikit-learn==1.2.2",
    "gradio==3.35.2", "gradio_client==0.2.9",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.9.12",
    "argparse", "easydict", "h5py", "matplotlib", "tqdm",
    "opencv-python==4.10.0.84", "pyyaml", "scipy", "tensorboardX",
    "termcolor", "pandas", "ftfy", "regex", "plyfile", "ipdb",
    "jsonlines", "openai", "nltk", "rouge", "py-rouge"
]

[project.optional-dependencies]
train = ["deepspeed==0.9.5", "ninja", "wandb", "torch-scatter==2.0.9"]

[project.urls]
"Homepage" = "https://qizekun.github.io/shapellm"
"Bug Tracker" = "https://github.com/qizekun/ShapeLLM/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
